test_compile_errors/src/compile-fail/v.stderr
error: expected a literal
 --> $DIR/v.rs:8:12
  |
8 |     warnv!(&ctx, 1);
  |            ^^^^
  |
  = note: only literals (like `"foo"`, `42` and `3.14`) can be passed to `concat!()`

error: 3 positional arguments in format string, but there are 2 arguments
  --> $DIR/v.rs:13:5
   |
13 |     warnv!("bad prefix with {:?}", i);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: argument never used
  --> $DIR/v.rs:18:5
   |
18 |     warnv!("prefix", "no place", i);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     argument never used
   |     formatting specifier missing
   |
   = note: this error originates in the macro `$crate::__tao_v_eval` (in Nightly builds, run with -Z macro-backtrace for more info)
